# rustedbytes-tris

./: Cargo.toml  README.md  build.rs
.github/workflows/: build-and-deploy.yml
assets/: icon.psd
src/: ai.rs  consts.rs  draws.rs  game.rs  main.rs
