[package]
name = "rustedbytes-tris"
version = "0.1.1"
edition = "2024"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
description = "A Vanishing Tic Tac Toe clone written in Rust."
license = "GPL-3.0"
repository = "https://github.com/mad4j/rustedbytes-tris"
homepage = "https://github.com/mad4j/rustedbytes-tris"
keywords = ["tic-tac-toe", "game", "rust", "clone", "graphics"]
categories = ["games", "graphics"]
readme = "README.md"
exclude = ["/resources"]

[dependencies]
minifb = "0.28.0"
rand = "0.9.1"
raqote = "0.8.5"

[target.'cfg(windows)'.dependencies]
temp-file = "0.1.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"